dev > 1.9.8.4
 - methylation region can now estimate empirical p-values. Empirical P-values require biological replicates in at least
   one of the groups under analysis. Two passes over the data are required. In the first pass, the empirical null
   distribution is observed by comparing pairs of samples in the same group. In the second pass, this distribution is
   used to estimate the p-value of observing the between group differences.
 - Make it possible to open Goby alignments through HTTP. Simply specify a URL as a basename as argument to the goby
   tools. This is supported broadly by the API, so the concatenation reader also supports URLs, for instance. TMH files
   currently cannot be loaded remotely. Alignments that require upgrading will also fail to load remotely.
 - vcf methylation format: removed space in name of C and Cm group INFO fields.
 - Added the ability in alignment-to-text mode to output HTML (-f html), to start/end at offsets (-s/-e) in the alignments and
   to limit the number of alignment entries to output (-n).
 - Fixed a bug related aligning Paired-End with Gsnap.
1.9.8.3.1
 - Fix a bug related to writing paired end alignments in the Gsnap parser (C API)
1.9.8.3
 - Added a methylation_region format capable of averaging methylation rates for different cytosine contexts over
   arbitrarily defined regions.
 - Added a diploid genotype filter to use when calling genotypes in a diploid genome.
 - discover-sequence-variants format compare_groups: Write distinct fisher p-values for each comparison pair
 - Fix FDR mode output for TSV format. Make open --column-selection-filter work.
 - Fix bug that prevented methylation vcf output from writing any line.
1.9.8.2.1
 - Fix bug in GenotypesOutputFormat that caused GenotypesOutputFormat to throw an exception when processing some sites.
1.9.8.2
 - Make it possible to activate indel calling without recompilation. Mode discover-sequence-variants now accepts