@@ -1,0 +1,4 @@
+>1
+ACTGNNNACTG
+>2
+NNNNNANNNNN
