@@ -1,4 +1,5 @@
 dev > 1.9.8.4
+
  - methylation region can now estimate empirical p-values. Empirical P-values require biological replicates in at least
    one of the groups under analysis. Two passes over the data are required. In the first pass, the empirical null
    distribution is observed by comparing pairs of samples in the same group. In the second pass, this distribution is
@@ -9,6 +10,7 @@ dev > 1.9.8.4
  - vcf methylation format: removed space in name of C and Cm group INFO fields.
  - Added the ability in alignment-to-text mode to output HTML (-f html), to start/end at offsets (-s/-e) in the alignments and
    to limit the number of alignment entries to output (-n).
+ - Add an implementation of random access sequence interface that can read a fasta file indexed with faidx.
  - Fixed a bug related aligning Paired-End with Gsnap.
 1.9.8.3.1
  - Fix a bug related to writing paired end alignments in the Gsnap parser (C API)
